examples/errors/constructor_requires_this.pvl
// -*- tab-width:2 ; indent-tabs-mode:nil -*-
//:: cases ConstructorError1
//:: tools silicon
//:: verdict Error

class err {

  int x;
  
  requires PointsTo(x,write,3);
  ensures  PointsTo(x,write,4);
  err(){
    refute false;
    x=x+1;
  }
}

